--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html lang="ru">
+    <head>
+        <meta charset="utf-8">
+        <title>Device</title>
+        <link rel="stylesheet" href="styles/normalize.css">
+        <link rel="stylesheet" href="styles/style.css">
+    </head>
+    <body>
+        <header class="main-header">
+            <a>
+                <h1 class="header-logo">Device</h1>
+            </a>
+            <nav class="main-navigation">
+                <p>
+                    <input type="seach">
+                    <a>Сравнить</a>
+                    <a>Войти</a>
+                    <a>Корзина</a>
+                </p>
+                <ul class="site-navigation">
+                    <li><a>Каталог товаров</a></li>
+                    <li><a>Доставка</a></li>
+                    <li><a>Гарантия</a></li>
+                    <li><a>Контакты</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
 
+        </main>
+        <footer>
+
+        </footer>
+    </body>
+</html>
