--- a/index.html
+++ b/index.html
@@ -8,26 +8,90 @@
     </head>
     <body>
         <header class="main-header">
-            <a>
-                <h1 class="header-logo">Device</h1>
-            </a>
             <nav class="main-navigation">
-                <p>
+                <a class="main-header-logo">Device</a>
+                <p class="user-tools">
                     <input type="seach">
                     <a>Сравнить</a>
-                    <a>Войти</a>
                     <a>Корзина</a>
                 </p>
+                <ul class="user-navigation">
+                    <li><a href="#">Войти</a></li>
+                </ul>
                 <ul class="site-navigation">
-                    <li><a>Каталог товаров</a></li>
-                    <li><a>Доставка</a></li>
-                    <li><a>Гарантия</a></li>
-                    <li><a>Контакты</a></li>
+                    <li>
+                        <a href="#">Каталог товаров</a>
+                        <button class="catalog-open">Open</button>
+                    </li>
+                    <li><a href="#">Доставка</a></li>
+                    <li><a href="#">Гарантия</a></li>
+                    <li><a href="#">Контакты</a></li>
                 </ul>
             </nav>
         </header>
-        <main>
-
+        <main class="container">
+            <h1 class="visually-hidden">Девайс</h1>
+            <section class="popular-items">
+                <h2 class="visually-hidden">Популярные товары</h2>
+                <ol class="popular-items-list">
+                    <li class="popular-item">
+                        <img class="popular-item-image" src="" width="" height="" alt="Селфи-палка длиной 8 м и весом 5 кг">
+                        <span class="popular-item-number">01</span>
+                        <span class="popular-item-slogan">Делай селфи, как Бен Стиллер!</span>
+                        <p class="popular-item-promo">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
+                        <a class="button more-details" href="#">Подробнее</a>
+                        <table class="popular-item-characteristics-list">
+                            <tr class="value">
+                                <td>8,5 м</td>
+                                <td>5 кг</td>
+                                <td>Карбон</td>
+                            </tr>
+                            <tr class="properties">
+                                <td>Длина палки</td>
+                                <td>Вес палки</td>
+                                <td>Материал</td>
+                            </tr>
+                        </table>
+                    </li>
+                    <li class="popular-item">
+                        <img class="popular-item-image" src="" width="" height="" alt="Фитнес-браслет">
+                        <span class="popular-item-number">02</span>
+                        <span class="popular-item-slogan">Худеем правильно!</span>
+                        <p class="popular-item-promo">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
+                        <a class="button more-details" href="#">Подробнее</a>
+                        <table class="popular-item-characteristics-list">
+                            <tr class="value">
+                                <td>48 часов</td>
+                            </tr>
+                            <tr class="properties">
+                                <td>Без подзарядки</td>
+                            </tr>
+                        </table>
+                    </li>
+                    <li class="popular-item">
+                        <img class="popular-item-image" src="" width="" height="" alt="Квадрокоптер с лазером">
+                        <span class="popular-item-number">03</span>
+                        <span class="popular-item-slogan">Порхает как бабочка, жалит как пчела!</span>
+                        <p class="popular-item-promo">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
+                        <a class="button more-details" href="#">Подробнее</a>
+                        <table class="popular-item-characteristics-list">
+                            <tr class="value">
+                                <td>800 м</td>
+                                <td>50 м</td>
+                            </tr>
+                            <tr class="properties">
+                                <td>Дальность полета</td>
+                                <td>Радиус поражения</td>
+                            </tr>
+                        </table>
+                    </li>
+                </ol>
+                <div class="sliders">
+                    <button class="slider-button">Первый слайд</button>
+                    <button class="slider-button">Второй слайд</button>
+                    <button class="slider-button">Третий слайд</button>
+                </div>
+            </section>
         </main>
         <footer>
 
