--- a/index.html
+++ b/index.html
@@ -92,6 +92,66 @@
                     <button class="slider-button">Третий слайд</button>
                 </div>
             </section>
+            <section class="catalog">
+                <h2 class="visually-hidden">Каталог товаров</h2>
+                <ul class="catalog-list">
+                    <li class="catalog-item"><a href="#">Виртуальная реальность</a></li>
+                    <li class="catalog-item"><a href="#">Моноподы для селфи</a></li>
+                    <li class="catalog-item"><a href="#">Экшн-камеры</a></li>
+                    <li class="catalog-item"><a href="#">Фитнес-браслеты</a></li>
+                    <li class="catalog-item"><a href="#">Умные часы</a></li>
+                    <li class="catalog-item"><a href="#">Квадрокоптеры</a></li>
+                </ul>
+            </section>
+            <section class="services">
+                <h2 class="visually-hidden">Сервисы</h2>
+                <ul class="services-list-buttons">
+                    <li class="services-item-button button"><button>Доставка</button></li>
+                    <li class="services-item-button button"><button>Гарантия</button></li>
+                    <li class="services-item-button button"><button>Кредит</button></li>
+                </ul>
+                <ul class="services-list">
+                    <li class="services-item">
+                        <h3 class="services-item-title">Доставка</h3>
+                        <p class="services-item-text">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+                    </li>
+                    <li class="services-item">
+                        <h3 class="services-item-title">Гарантия</h3>
+                        <p class="services-item-text">Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. <br> 
+                        Товар, не дом, конечно же.</p>
+                    </li>
+                    <li class="services-item">
+                        <h3 class="services-item-title">Кредит</h3>
+                        <p class="services-item-text">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.</p>
+                    </li>
+                </ul>
+            </section>
+            <section class="companies-logos">
+                <h2 class="visually-hidden">Производители</h2>
+                <ul class="companies-logos-list">
+                    <li class="companie-logo-item"><a href="#"><img class="dji" src="" width="" height="" alt="dji"></a></li>
+                    <li class="companie-logo-item"><a href="#"><img class="sp-gadgets" src="" width="" height="" alt="sp-gadgets"></a></li>
+                    <li class="companie-logo-item"><a href="#"><img class="GoPro" src="" width="" height="" alt="GoPro"></a></li>
+                    <li class="companie-logo-item"><a href="#"><img class="vive" src="" width="" height="" alt="vive"></a></li>
+                </ul>
+            </section>
+            <section class="about-us">
+                <h2 class="about-us__title">О нас</h2>
+                <p class="about-us__text">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+                <p class="about-us__text">Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
+                <ul class="about-us__transport-companies-list">
+                    <li class="about-us__transport-companie-item">Деловые Линии</li>
+                    <li class="about-us__transport-companie-item">Автотрейдинг</li>
+                    <li class="about-us__transport-companie-item">ЖелДорЭкспедиция</li>
+                </ul>
+                <a class="button more-details" href="#">Подробнее о нас</a>
+            </section>
+            <section class="contacts">
+                <h2 class="contacts__title">Контакты</h2>
+                <p class="contacts__text">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
+                <img class="contacts__map" src="" width="" height="" alt="Ул. Строителей, 15">
+                <a class="button more-details" href="#">Напишите нам</a>
+            </section>
         </main>
         <footer>
 
