--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     <li><a href="#" class="social-button-twitter">twitter</a></li>
                 </ul>
                 <p class="copyright">
-                    <span class="icon">html academy</span>
+                    <a href="https://htmlacademy.ru"><span class="icon">html academy</span></a>
                 </p>
             </div>
         </footer>
