Разметка внутр.страницы без модальных окон и форм

--- a/inner-page.html
+++ b/inner-page.html
@@ -30,8 +30,81 @@
                 </ul>
             </nav>
         </header>
-        <main>
-
+        <main class="container">
+            <h1 class="page-title">Моноподы для селфи</h1>
+            <ul class="breadcrumbs">
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="#">Каталог товаров</a></li>
+                <li class="breadcrumbs-current">Моноподы для селфи</li>
+            </ul>
+            <section class="filters">
+                <h2 class="visually-hidden">Фильтр товаров</h2>
+                <!-- здесь будет форма -->
+            </section>
+            <section class="sort">
+                <h2 class="sort-title">Сортировка:</h2>
+                <ul class="sort-list">
+                    <li><a href="#">По цене</a></li>
+                    <li><a href="#">По типу</a></li>
+                    <li><a href="#">По популярности</a></li>
+                </ul>
+            </section>
+            <section class="catalog">
+                <h2 class="visually-hidden">Список моноподов для селфи</h2>
+                <ul class="catalog-list">
+                    <li class="catalog-item">
+                        <a href="#">
+                            <h3 class="catalog-item-title">Любительская селфи-палка</h3>
+                        </a>
+                        <a href="#">
+                            <p class="catalog-item-image">
+                                <img src="" width="" height="" alt="">
+                            </p>
+                        </a>
+                        <span class="catalog-item-price">500 руб.</span>
+                    </li>
+                    <li class="catalog-item">
+                        <a href="#">
+                            <h3 class="catalog-item-title">Профессиональная селфи-палка</h3>
+                        </a>
+                        <a href="#">
+                            <p class="catalog-item-image">
+                                <img src="" width="" height="" alt="">
+                            </p>
+                        </a>
+                        <span class="catalog-item-price">1 500 руб.</span>
+                    </li>
+                    <li class="catalog-item">
+                        <a href="#">
+                            <h3 class="catalog-item-title">Непотопляемая селфи-палка</h3>
+                        </a>
+                        <a href="#">
+                            <p class="catalog-item-image">
+                                <img src="" width="" height="" alt="">
+                            </p>
+                        </a>
+                        <span class="catalog-item-price">2 500 руб.</span>
+                    </li>
+                    <li class="catalog-item">
+                        <a href="#">
+                            <h3 class="catalog-item-title">Селфи-палка «Следуй за мной»</h3>
+                        </a>
+                        <a href="#">
+                            <p class="catalog-item-image">
+                                <img src="" width="" height="" alt="">
+                            </p>
+                        </a>
+                        <span class="catalog-item-price">4 900 руб.</span>
+                    </li>
+                </ul>
+                <ul class="pagination-list">
+                    <li class="pagination-item pagination-item-prev"><a href="#">Назад</a></li>
+                    <li class="pagination-item pagination-item-current"><a href="#">1</a></li>
+                    <li class="pagination-item"><a href="#">2</a></li>
+                    <li class="pagination-item"><a href="#">3</a></li>
+                    <li class="pagination-item pagination-item-next"><a href="#">Вперед</a></li>
+                </ul>
+            </section>
         </main>
         <footer class="main-footer">
             <div class="footer-top">
