--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
                 <a class="main-header-logo">Device</a>
                 <p class="user-tools">
                     <input type="seach">
-                    <a>Сравнить</a>
-                    <a>Корзина</a>
+                    <a href="#">Сравнить</a>
+                    <a href="#">Корзина</a>
                 </p>
                 <ul class="user-navigation">
                     <li><a href="#">Войти</a></li>
