--- a/inner-page.html
+++ b/inner-page.html
@@ -12,8 +12,8 @@
                 <a class="main-header-logo" href="index.html">Device</a>
                 <p class="user-tools">
                     <input type="seach">
-                    <a>Сравнить</a>
-                    <a>Корзина</a>
+                    <a href="#">Сравнить</a>
+                    <a href="#">Корзина</a>
                 </p>
                 <ul class="user-navigation">
                     <li><a href="#">Светлана Дурова</a></li>
@@ -56,44 +56,52 @@
                         <a href="#">
                             <h3 class="catalog-item-title">Любительская селфи-палка</h3>
                         </a>
-                        <a href="#">
-                            <p class="catalog-item-image">
-                                <img src="" width="" height="" alt="">
+                        <div class="catalog-item-image">
+                            <img src="" width="" height="" alt="">
+                            <p class="hover-box">
+                                <a class="button in-cart" href="#">В корзину</a>
+                                <button class="add-compare">Добавить к сравнению</button>
                             </p>
-                        </a>
+                        </div>
                         <span class="catalog-item-price">500 руб.</span>
                     </li>
                     <li class="catalog-item">
                         <a href="#">
                             <h3 class="catalog-item-title">Профессиональная селфи-палка</h3>
                         </a>
-                        <a href="#">
-                            <p class="catalog-item-image">
-                                <img src="" width="" height="" alt="">
+                        <div class="catalog-item-image">
+                            <img src="" width="" height="" alt="">
+                            <p class="hover-box">
+                                <a class="button in-cart" href="#">В корзину</a>
+                                <button class="add-compare">Добавить к сравнению</button>
                             </p>
-                        </a>
+                        </div>
                         <span class="catalog-item-price">1 500 руб.</span>
                     </li>
                     <li class="catalog-item">
                         <a href="#">
                             <h3 class="catalog-item-title">Непотопляемая селфи-палка</h3>
                         </a>
-                        <a href="#">
-                            <p class="catalog-item-image">
-                                <img src="" width="" height="" alt="">
+                        <div class="catalog-item-image">
+                            <img src="" width="" height="" alt="">
+                            <p class="hover-box">
+                                <a class="button in-cart" href="#">В корзину</a>
+                                <button class="add-compare">Добавить к сравнению</button>
                             </p>
-                        </a>
+                        </div>
                         <span class="catalog-item-price">2 500 руб.</span>
                     </li>
                     <li class="catalog-item">
                         <a href="#">
                             <h3 class="catalog-item-title">Селфи-палка «Следуй за мной»</h3>
                         </a>
-                        <a href="#">
-                            <p class="catalog-item-image">
-                                <img src="" width="" height="" alt="">
+                        <div class="catalog-item-image">
+                            <img src="" width="" height="" alt="">
+                            <p class="hover-box">
+                                <a class="button in-cart" href="#">В корзину</a>
+                                <button class="add-compare">Добавить к сравнению</button>
                             </p>
-                        </a>
+                        </div>
                         <span class="catalog-item-price">4 900 руб.</span>
                     </li>
                 </ul>
