--- a/index.html
+++ b/index.html
@@ -16,12 +16,20 @@
                     <a href="#">Корзина</a>
                 </p>
                 <ul class="user-navigation">
-                    <li><a href="#">Войти</a></li>
+                    <li>Войти</li>
                 </ul>
                 <ul class="site-navigation">
                     <li>
                         <a href="#">Каталог товаров</a>
                         <button class="catalog-open">Open</button>
+                        <ul class="site-navigation__catalog-list">
+                            <li class="site-navigation__catalog-item"><a href="#">Виртуальная реальность</a></li>
+                            <li class="site-navigation__catalog-item"><a href="inner-page.html">Моноподы для селфи</a></li>
+                            <li class="site-navigation__catalog-item"><a href="#">Экшн-камеры</a></li>
+                            <li class="site-navigation__catalog-item"><a href="#">Фитнес-браслеты</a></li>
+                            <li class="site-navigation__catalog-item"><a href="#">Умные часы</a></li>
+                            <li class="site-navigation__catalog-item"><a href="#">Квадрокоптеры</a></li>
+                        </ul>
                     </li>
                     <li><a href="#">Доставка</a></li>
                     <li><a href="#">Гарантия</a></li>
@@ -35,6 +43,7 @@
                 <h2 class="visually-hidden">Популярные товары</h2>
                 <ol class="popular-items-list">
                     <li class="popular-item">
+                        <h3 class="visually-hidden">Селфи-палка</h3>
                         <img class="popular-item-image" src="" width="" height="" alt="Селфи-палка длиной 8 м и весом 5 кг">
                         <span class="popular-item-number">01</span>
                         <span class="popular-item-slogan">Делай селфи, как Бен Стиллер!</span>
@@ -54,6 +63,7 @@
                         </table>
                     </li>
                     <li class="popular-item">
+                        <h3 class="visually-hidden">Фитнес-браслет</h3>
                         <img class="popular-item-image" src="" width="" height="" alt="Фитнес-браслет">
                         <span class="popular-item-number">02</span>
                         <span class="popular-item-slogan">Худеем правильно!</span>
@@ -69,6 +79,7 @@
                         </table>
                     </li>
                     <li class="popular-item">
+                        <h3 class="visually-hidden">Квадрокоптер</h3>
                         <img class="popular-item-image" src="" width="" height="" alt="Квадрокоптер с лазером">
                         <span class="popular-item-number">03</span>
                         <span class="popular-item-slogan">Порхает как бабочка, жалит как пчела!</span>
@@ -102,7 +113,7 @@
                 <h2 class="visually-hidden">Каталог товаров</h2>
                 <ul class="catalog-list">
                     <li class="catalog-item"><a href="#">Виртуальная реальность</a></li>
-                    <li class="catalog-item"><a href="#">Моноподы для селфи</a></li>
+                    <li class="catalog-item"><a href="inner-page.html">Моноподы для селфи</a></li>
                     <li class="catalog-item"><a href="#">Экшн-камеры</a></li>
                     <li class="catalog-item"><a href="#">Фитнес-браслеты</a></li>
                     <li class="catalog-item"><a href="#">Умные часы</a></li>
