use the <details> on the catalog

--- a/inner-page.html
+++ b/inner-page.html
@@ -21,16 +21,17 @@
                 </ul>
                 <ul class="site-navigation">
                     <li>
-                        <a href="#">Каталог товаров</a>
-                        <button class="catalog-open">Open</button>
-                        <ul class="site-navigation__catalog-list">
-                            <li class="site-navigation__catalog-item"><a href="#">Виртуальная реальность</a></li>
-                            <li class="site-navigation__catalog-item site-navigation__catalog-item-current"><a>Моноподы для селфи</a></li>
-                            <li class="site-navigation__catalog-item"><a href="#">Экшн-камеры</a></li>
-                            <li class="site-navigation__catalog-item"><a href="#">Фитнес-браслеты</a></li>
-                            <li class="site-navigation__catalog-item"><a href="#">Умные часы</a></li>
-                            <li class="site-navigation__catalog-item"><a href="#">Квадрокоптеры</a></li>
-                        </ul>
+                        <details>
+                            <summary>Каталог товаров</summary>
+                            <ul class="site-navigation__catalog-list">
+                                <li class="site-navigation__catalog-item"><a href="#">Виртуальная реальность</a></li>
+                                <li class="site-navigation__catalog-item"><a href="inner-page.html">Моноподы для селфи</a></li>
+                                <li class="site-navigation__catalog-item"><a href="#">Экшн-камеры</a></li>
+                                <li class="site-navigation__catalog-item"><a href="#">Фитнес-браслеты</a></li>
+                                <li class="site-navigation__catalog-item"><a href="#">Умные часы</a></li>
+                                <li class="site-navigation__catalog-item"><a href="#">Квадрокоптеры</a></li>
+                            </ul>
+                        </details>
                     </li>
                     <li><a href="#">Доставка</a></li>
                     <li><a href="#">Гарантия</a></li>
