--- a/inner-page.html
+++ b/inner-page.html
@@ -17,7 +17,7 @@
                 </p>
                 <ul class="user-navigation">
                     <li><a href="profile.html">Светлана Дурова</a></li>
-                    <a class="login-out" href="login-out.html">Выйти</a>
+                    <li><a class="login-out" href="login-out.html">Выйти</a></li>
                 </ul>
                 <ul class="site-navigation">
                     <li>
